Fix: table title and text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,10 @@ table img {
     height: 40px;
 }
 
+tr>:first-child {
+    text-align: left;
+}
+
 /* Offcanvas form */
 .offcanvas {
     width: 100% !important;
